added BH criterion to config file for ray tracing

--- a/raytrace.cfg
+++ b/raytrace.cfg
@@ -32,6 +32,7 @@ maxRayMemImbalance          0.75
 HEALPixRingWeightPath         /home/beckermr/src/Healpix_2.20a/data
 SHTOrder                      7
 ComvSmoothingScale         0.5      #in Mpc/h
+BHCrit                     0.01     #option set convergence of BH criterion for tree code
 
 #for doing galaxy grid search
 # specify (i.e. uncomment line below and give path) a list of galaxy files if you want to find images for a set of galaxies
