eliminated duplicate source files

--- a/lensplanes/Makefile
+++ b/lensplanes/Makefile
@@ -13,9 +13,10 @@
 #OPTS += -DDEF_GSL_IEEE_ENV #define the GSL IEEE environment variables - for debugging
 
 #select your computer
-COMP="orange"
+#COMP="orange"
 #COMP="orion-gcc"
 #COMP="midway"
+COMP="home"
 
 ################################
 #edit/add to match your machine
@@ -25,13 +26,18 @@ COMP="orange"
 CC          =  mpicc
 OPTIMIZE    =  -g -O3 #-Wall -wd981 #-wd1419 -wd810
 
+ifeq ($(COMP),"home")
+EXTRACFLAGS = -I/opt/local/include
+EXTRACLIB   = -L/opt/local/lib
+endif
+
 ifeq ($(COMP),"orange")
 CC          =  mpicc
 OPTIMIZE    =  -g -O3 #-Wall -wd981 #-wd1419 -wd810
 GSLI        =  -I/afs/slac.stanford.edu/g/ki/software/gsl/1.15/include
-GSLL        =  -L/afs/slac.stanford.edu/g/ki/software/gsl/1.15/lib -lgsl -lgslcblas
+GSLL        =  -L/afs/slac.stanford.edu/g/ki/software/gsl/1.15/lib
 HDF5I       =  -I/afs/slac.stanford.edu/g/ki/software/hdf5/1.8.8/include 
-HDF5L       =  -L/afs/slac.stanford.edu/g/ki/software/hdf5/1.8.8/lib -lz -lhdf5_hl -lhdf5 
+HDF5L       =  -L/afs/slac.stanford.edu/g/ki/software/hdf5/1.8.8/lib
 EXTRACFLAGS =
 EXTRACLIB   =
 endif
@@ -83,10 +89,10 @@ ifeq (TEST_CODE,$(findstring TEST_CODE,$(CFLAGS)))
 TESTCODE=test_code.o
 endif
 
-OBJS = $(MEMWATCH) $(TESTCODE) config.o cosmocalc.o globalvars.o \
-	healpix_utils.o ioutils.o lightconeio.o make_lensplanes_hdf5.o \
+OBJS = $(MEMWATCH) $(TESTCODE) config.o ../cosmocalc.o globalvars.o \
+	../healpix_utils.o ioutils.o lightconeio.o make_lensplanes_hdf5.o \
 	make_lensplanes_pointmass_test.o makemaps.o profile.o \
-	read_lensplanes_hdf5.o
+	../read_lensplanes_hdf5.o
 
 EXEC = makelensplanes
 TEST = makelensplanes
@@ -97,7 +103,7 @@ OBJS1=$(OBJS) main.o
 $(EXEC): $(OBJS1)
 	$(CLINK) $(CFLAGS) -o $@ $(OBJS1) $(CLIB)
 
-$(OBJS1): healpix_utils.h  profile.h  raytrace.h Makefile
+$(OBJS1): ../healpix_utils.h  profile.h  raytrace.h Makefile
 
 .PHONY : clean
 clean: 
