fixed compile warnings

--- a/lensplanes/Makefile
+++ b/lensplanes/Makefile
@@ -27,6 +27,7 @@ CC          =  mpicc
 OPTIMIZE    =  -g -O3 #-Wall -wd981 #-wd1419 -wd810
 
 ifeq ($(COMP),"home")
+CC          =  openmpicc
 EXTRACFLAGS = -I/opt/local/include
 EXTRACLIB   = -L/opt/local/lib
 endif
