fixed some bugs for lens plane maps

--- a/raytrace.cfg
+++ b/raytrace.cfg
@@ -11,7 +11,7 @@ NumLensPlanes               50
 
 # lens plane info
 LensPlanePath               ./lensplanes
-LensPlaneName               lensplane_L3GpcA_MSLC
+LensPlaneName               
 
 # ray output info
 OutputPath                  ./outputs
@@ -32,7 +32,6 @@ maxRayMemImbalance          0.75
 HEALPixRingWeightPath         /home/beckermr/src/Healpix_2.20a/data
 SHTOrder                      7
 ComvSmoothingScale         0.5      #in Mpc/h
-BHCrit                     0.01     #option set convergence of BH criterion for tree code
 
 #for doing galaxy grid search
 # specify (i.e. uncomment line below and give path) a list of galaxy files if you want to find images for a set of galaxies
@@ -40,17 +39,10 @@ BHCrit                     0.01     #option set convergence of BH criterion for 
 GalOutputName               gal_images
 NumGalOutputFiles           1                      #will split image gals into this many files per plane
 
-#for making lens planes  
-LightConeFileList           ./lightconefilelist.txt
-LightConeFileType           GADGET2
-LightConeOriginX            1500.0                 # location of observer in light cone file on disk in Mpc/h, NOT in units of light cone files
-LightConeOriginY            1500.0
-LightConeOriginZ            1500.0
-LensPlaneOrder              3
-memBuffSizeInMB             3000
-MaxNumLensPlaneInMem        50     #if particles for more than this many lens planes are in mem, all planes will be written to disk
-LightConePartChunkFactor    150    # memBuffSizeInMB/LightConePartChunkFactor extra mem is allocated to each plane as needed when sorting particles
-partMass                    7e15   # optional mass to use for particles if needed by I/O code for light cone format      
-MassConvFact                1e10
-LengthConvFact              1.0
-VelocityConvFact            1.0
+
+#for using input healpix particle maps
+partMass                    7e15
+HEALPixLensPlaneMapPath     
+HEALPixLensPlaneMapName     
+HEALPixLensPlaneMapOrder    10
+
